# hymns

./: .gitignore  Dockerfile  README.md  compose.yaml  data.py  gen-all.py  hymns.py  paper-size.py  paper-sizes.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: gen-pdf.yaml  pypi-release.yaml
ci/: gen.py  generate-pdfs.sh
src/hymns/: __init__.py  data.py
src/hymns/data/: __init__.py  base.py  eng.py  fra.py  por.py  spa.py
