[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.8.19,<0.9.0"]

[project]
name = "hymns"
version = "2025.9.0"
description = "Compile a single PDF containing all the hymns for The Church of Jesus Christ of Latter-day Saints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pymupdf>=1.26.1",
    "pypng>=0.20220715.0",
    "qrcode>=8.2",
]

[project.scripts]
gen-all-hymns = "hymns:gen_all"
hymns = "hymns:main"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "uv-build>=0.8.19",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
